--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,66 +18,7 @@
 
     <link rel="icon" type="image/vnd.microsoft.icon" href="/favicon.ico">
 
-    <style type="text/css" media="screen" >
-        body
-        {
-            margin:50px 0px; padding:0px;
-            text-align:center;
-        }
-
-        #Content
-        {
-            width:500px;
-            margin:0px auto;
-            text-align:left;
-        }
-        
-        p.centeredImage
-        {
-            text-align:center;
-            margin-top:0px;
-            margin-bottom:0px;
-            padding:0px;
-        }
-        
-        a
-        {text-decoration : none}
-        
-        a:link
-        {color : #484BA9}
-        
-        a:visited
-        {color : #484BA9}
-        
-        a:active
-        {color : #DBDCFE}
-        
-        a:hover
-        {color : #0000ff}
-        
-        img.floatLeft
-        {
-            float: left;
-            margin 4px;
-        }
-        
-        img.gameOffset
-        {
-            position: relative;
-            left: -100px;	
-        }
-        
-        img.floatRight
-        {
-            float: right;
-            margin: 4px;
-        }
-        
-        img.customBorder
-        {
-            border: 3px black solid
-        }
-    </style>
+    {% include css.html %}
 
     <script type="text/javascript" src="/lightbox/js/prototype.js"></script>
 
