--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,16 +1,7 @@
 <head>
     <title>Joseph "JPLC" Cassano | Home</title>
     
-    <!-- Google Analytics -->
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-8277874-3');  // Replace with your property ID.
-        ga('send', 'pageview');
-    </script>
-    <!-- End Google Analytics -->
+    {% include analytics_google.html %}
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
