--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <br>
         © 2009-2019 Joseph Cassano
         <br>
-        {% include ads_google.html %}
+        {% include ads.html %}
         <br>
         Powered by <a href="https://pages.github.com/">GitHub Pages</a>.
     </p>
