--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
     <title>Joseph "JPLC" Cassano | Home</title>
     
-    {% include analytics_google.html %}
+    {% include analytics.html %}
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
