--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,11 +11,5 @@
 
     {% include css.html %}
 
-    <script type="text/javascript" src="/lightbox/js/prototype.js"></script>
-
-    <script type="text/javascript" src="/lightbox/js/scriptaculous.js?load=effects,builder"></script>
-
-    <script type="text/javascript" src="/lightbox/js/lightbox.js"></script>
-
-    <link rel="stylesheet" href="/lightbox/css/lightbox.css" type="text/css" media="screen" />
+    {% include lightbox.html %}
 </head>
