--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,15 +1,8 @@
 <head>
-    <title>Joseph "JPLC" Cassano | Home</title>
-    
-    {% include analytics.html %}
-
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-
-    <link rel="shortcut icon" href="/favicon.ico" >
-
-    <link rel="icon" type="image/vnd.microsoft.icon" href="/favicon.ico">
-
+    <title>Joseph "JPLC" Cassano | Home</title>
+    {% include analytics.html %}
+    {% include favicon.html %}
     {% include css.html %}
-
     {% include lightbox.html %}
 </head>
