--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,12 @@
-<p>
-    ~
-    <br>
-    <br>
-    © 2009-2019 Joseph Cassano
-    <br>
-    {% include ads_google.html %}
-    <br>
-    Powered by <a href="https://pages.github.com/">GitHub Pages</a>.
-</p>
+<footer>
+    <p>
+        ~
+        <br>
+        <br>
+        © 2009-2019 Joseph Cassano
+        <br>
+        {% include ads.html %}
+        <br>
+        Powered by <a href="https://pages.github.com/">GitHub Pages</a>.
+    </p>
+</footer>
