--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,4 @@
 <footer>
-    <p>
-        © 2009-2019 Joseph Cassano
-        <br>
-        <br>
-        Powered by <a href="https://pages.github.com/">GitHub Pages</a>.
-    </p>
+    <p>© 2009-2019 Joseph Cassano</p>
+    <p>Powered by <a href="https://pages.github.com/">GitHub Pages</a>.</p>
 </footer>
