--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Joseph "JPLC" Cassano | Home</title>
+    <title>{{ site.title }} | {{ page.title }}</title>
     {% include analytics.html %}
     {% include favicon.html %}
     {% include css.html %}
