--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>Joseph "JPLC" Cassano</h1>
+    <h1>{{ site.title }}</h1>
     <p class="centeredImage"><img src="/eye_banner.jpg" alt="Welcome!" height="198" width="940"></p>
     {% include nav.html %}
 </header>
