--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,5 +13,5 @@
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href= "http://ca.linkedin.com/in/josephcassano">R&eacute;sum&eacute;</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href = "mailto:joseph.cassano@jplc.ca?subject=jplc.ca%20Site%20Visit">Contact</a>
+    <a href = "mailto:{{ site.email }}?subject=jplc.ca%20Site%20Visit">Contact</a>
 </p>
