Edited default layout. Commented out the include for ads.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
             </div>
         </section>
         <p>~</p>
+		{% comment %}
         {% include ads.html %}
+		{% endcomment %}
         {% include footer.html %}
     </body>
 </html>
