--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,17 +1,31 @@
+{% assign indexString = "index.html" %}
+{% assign homePageDir = "/" %}
+{% assign homePageUrl = homePageDir | append: indexString %}
+{% assign aboutMePageDir = "/about_me/" %}
+{% assign aboutMePageUrl = aboutMePageDir | append: indexString %}
+{% assign gamesPageDir = "/games/" %}
+{% assign gamesPageDir = "/about_me/" %}
+{% assign gamesPageUrl = gamesPageDir | append: indexString %}
+{% assign homeTitle = "TITLE_NOT_FOUND" %}
+{% assign aboutMeTitle = "TITLE_NOT_FOUND" %}
+{% assign gamesTitle = "TITLE_NOT_FOUND" %}
+{% for item in site.pages %}
+    {% if item.url == homePageUrl %}
+        {% assign homeTitle = item.title }
+    {% elsif item.url == aboutMePageUrl %}
+        {% assign aboutMeTitle = item.title %}
+    {% elsif item.url == gamesPageUrl %}
+        {% assign gamesTitle = item.title %}
+    {% endif %}
+{% endfor %}
 <p>
-    <a href = "/">Home</a>
+    <a href = "{{ homePageDir }}">{{ homeTitle }}</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href = "/blog/">Blog</a>
+    <a href = "{{ aboutMePageDir }}">{{ aboutMeTitle }}</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href = "/about_me/">About Me</a>
+    <a href = "{{ gamesPageDir }}">{{ gamesTitle }}</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href = "/games/">Games</a>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href= "/accounts/">Various Accounts</a>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href= "/portfolio/">Portfolio</a>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href= "http://ca.linkedin.com/in/josephcassano">R&eacute;sum&eacute;</a>
+    <a href= "{{ site.linkedInUrl }}">R&eacute;sum&eacute;</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href = "mailto:{{ site.email }}?subject=jplc.ca%20Site%20Visit">Contact</a>
 </p>
