Fixed Jekyll Liquid (hopefully). page.path doesn't lead with a slash, but I was assuming it did. Fixed (hopefully).

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,29 +1,32 @@
 {% assign indexString = "index.html" %}
-{% assign homePageDir = "/" %}
-{% assign homePageUrl = homePageDir | append: indexString %}
-{% assign aboutMePageDir = "/about_me/" %}
-{% assign aboutMePageUrl = aboutMePageDir | append: indexString %}
-{% assign gamesPageDir = "/games/" %}
-{% assign gamesPageUrl = gamesPageDir | append: indexString %}
+{% assign slashString = "/" %}
+{% assign homePageDir = "" %}
+{% assign homePageStrictDir = slashString | append: homePageDir %}
+{% assign homePagePath = homePageDir | append: indexString %}
+{% assign aboutMePageDir = "about_me/" %}
+{% assign aboutMePageStrictDir = slashString" | append: aboutMePageDir %}
+{% assign aboutMePagePath = aboutMePageDir | append: indexString %}
+{% assign gamesPageDir = "games/" %}
+{% assign gamesPageStrictDir = frontSlash | append: gamesPageDir %}
+{% assign gamesPagePath = gamesPageDir | append: indexString %}
 {% assign homeTitle = "TITLE_NOT_FOUND" %}
 {% assign aboutMeTitle = "TITLE_NOT_FOUND" %}
 {% assign gamesTitle = "TITLE_NOT_FOUND" %}
 {% for item in site.pages %}
-{{ item.path }}
-    {% if item.path == homePageUrl %}
+    {% if item.path == homePagePath %}
         {% assign homeTitle = item.title }
-    {% elsif item.path == aboutMePageUrl %}
+    {% elsif item.path == aboutMePagePath %}
         {% assign aboutMeTitle = item.title %}
-    {% elsif item.path == gamesPageUrl %}
+    {% elsif item.path == gamesPagePath %}
         {% assign gamesTitle = item.title %}
     {% endif %}
 {% endfor %}
 <p>
-    <a href = "{{ homePageDir }}">{{ homeTitle }} {{ homePageUrl }}</a>
+    <a href = "{{ homePageStrictDir }}">{{ homeTitle }} {{ homePagePath }}</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href = "{{ aboutMePageDir }}">{{ aboutMeTitle }} {{ aboutMePageUrl }}</a>
+    <a href = "{{ aboutMePageStrictDir }}">{{ aboutMeTitle }} {{ aboutMePagePath }}</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href = "{{ gamesPageDir }}">{{ gamesTitle }} {{ gamePageUrl }}</a>
+    <a href = "{{ gamesPageStrictDir }}">{{ gamesTitle }} {{ gamePagePath }}</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href= "{{ site.linkedInUrl }}">R&eacute;sum&eacute;</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
