Fixed nav names. Accidentally left in the debug for the nav names. Fixed.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,11 +22,11 @@
     {% endif %}
 {% endfor %}
 <p>
-    <a href = "{{ homePageStrictDir }}">{{ homeTitle }} {{ homePagePath }}</a>
+    <a href = "{{ homePageStrictDir }}">{{ homeTitle }}</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href = "{{ aboutMePageStrictDir }}">{{ aboutMeTitle }} {{ aboutMePagePath }}</a>
+    <a href = "{{ aboutMePageStrictDir }}">{{ aboutMeTitle }}</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href = "{{ gamesPageStrictDir }}">{{ gamesTitle }} {{ gamePagePath }}</a>
+    <a href = "{{ gamesPageStrictDir }}">{{ gamesTitle }}</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href= "{{ site.linkedInUrl }}">R&eacute;sum&eacute;</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
