--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,10 +4,10 @@
 {% assign homePageStrictDir = slashString | append: homePageDir %}
 {% assign homePagePath = homePageDir | append: indexString %}
 {% assign aboutMePageDir = "about_me/" %}
-{% assign aboutMePageStrictDir = slashString" | append: aboutMePageDir %}
+{% assign aboutMePageStrictDir = slashString | append: aboutMePageDir %}
 {% assign aboutMePagePath = aboutMePageDir | append: indexString %}
 {% assign gamesPageDir = "games/" %}
-{% assign gamesPageStrictDir = frontSlash | append: gamesPageDir %}
+{% assign gamesPageStrictDir = slashString | append: gamesPageDir %}
 {% assign gamesPagePath = gamesPageDir | append: indexString %}
 {% assign homeTitle = "TITLE_NOT_FOUND" %}
 {% assign aboutMeTitle = "TITLE_NOT_FOUND" %}
