--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,7 +14,7 @@
 {% assign gamesTitle = "TITLE_NOT_FOUND" %}
 {% for item in site.pages %}
     {% if item.path == homePagePath %}
-        {% assign homeTitle = item.title }
+        {% assign homeTitle = item.title %}
     {% elsif item.path == aboutMePagePath %}
         {% assign aboutMeTitle = item.title %}
     {% elsif item.path == gamesPagePath %}
