--- a/_includes/css.html
+++ b/_includes/css.html
@@ -12,7 +12,7 @@
         text-align:left;
     }
 
-    p.centeredImage
+    p.centered
     {
         text-align:center;
         margin-top:0px;
