--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,7 @@
 <header>
-    <h1>{{ site.title }}</h1>
-    <p class="centeredImage"><img src="/eye_banner.jpg" alt="Welcome!" height="198" width="940"></p>
-    {% include nav.html %}
+    <p class="centered">
+        <h1>{{ site.title }}</h1>
+        <img src="/eye_banner.jpg" alt="Welcome!" height="198" width="940"></p>
+        {% include nav.html %}
+    </p>
 </header>
