--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <p class="centered">
         <h1>{{ site.title }}</h1>
-        <img src="/eye_banner.jpg" alt="Welcome!" height="198" width="940"></p>
+        <img src="/eye_banner.jpg" alt="Welcome!" height="198" width="940">
         {% include nav.html %}
     </p>
 </header>
