--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <h1>{{ site.title }}</h1>
     <p class="centered">
-        <img src="/eye_banner.jpg" alt="Welcome!" height="198" width="940">
+        <img src="/eye_banner.jpg" alt="Welcome!">
     </p>
     {% include nav.html %}
 </header>
