--- a/_includes/css.html
+++ b/_includes/css.html
@@ -11,6 +11,13 @@
         margin:0px auto;
         text-align:left;
     }
+    
+    #Centered
+    {
+        width:2000px;
+        margin:0px auto;
+        text-align:center;
+    }
 
     p.centered
     {
