--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,7 @@
 <header>
     <h1>{{ site.title }}</h1>
-    <img src="/eye_banner.jpg" alt="Welcome!">
+    <p class="centered">
+        <img src="/eye_banner.jpg" alt="Welcome!">
+    </p>
     {% include nav.html %}
 </header>
