--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,11 @@
 <header>
-    <h1>{{ site.title }}</h1>
+    <div id="Centered">
+        <h1>{{ site.title }}</h1>
+    </div>
     <p class="centered">
         <img src="/eye_banner.jpg" alt="Welcome!">
     </p>
-    {% include nav.html %}
+    <div id="Centered">
+        {% include nav.html %}
+    </div>
 </header>
