--- a/_includes/css.html
+++ b/_includes/css.html
@@ -1,7 +1,8 @@
 <style type="text/css" media="screen" >
     body
     {
-        margin:50px 0px; padding:0px;
+        margin:50px 0px;
+        padding:0px;
         text-align:center;
     }
 
@@ -28,40 +29,22 @@
     }
 
     a
-    {text-decoration : none}
+    {text-decoration:none}
 
     a:link
-    {color : #484BA9}
+    {color:#484BA9}
 
     a:visited
-    {color : #484BA9}
+    {color:#484BA9}
 
     a:active
-    {color : #DBDCFE}
+    {color:#DBDCFE}
 
     a:hover
-    {color : #0000ff}
-
-    img.floatLeft
-    {
-        float: left;
-        margin 4px;
-    }
-
-    img.gameOffset
-    {
-        position: relative;
-        left: -100px;	
-    }
-
-    img.floatRight
-    {
-        float: right;
-        margin: 4px;
-    }
+    {color:#0000ff}
 
     img.customBorder
     {
-        border: 3px black solid
+        border:3px black solid
     }
 </style>
