--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
     <body>
         {% include header.html %}
         <section>
-            <div id="Centered">
+            <p class="centered">
                 <h2>{{ page.title }}</h2>
-            </div>
+            </p>
             <div id="Content">
                 {{ content }}
             </div>
