--- a/_includes/css.html
+++ b/_includes/css.html
@@ -19,6 +19,12 @@
         margin:0px auto;
         text-align:center;
     }
+    
+    #TrueCentered
+    {
+        margin:0px auto;
+        text-align:center;
+    }
 
     p.centered
     {
