--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
     <body>
         {% include header.html %}
         <section>
-            <p class="centered">
+            <div id="TrueCentered">
                 <h2>{{ page.title }}</h2>
-            </p>
+            </div>
             <div id="Content">
                 {{ content }}
             </div>
