--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <header>
-    <div id="TrueCentered">
+    <div id="Centered">
         <h1>{{ site.title }}</h1>
     </div>
     <p class="centered">
         <img src="/eye_banner.jpg" alt="Welcome!">
     </p>
-    <div id="TrueCentered">
+    <div id="Centered">
         {% include nav.html %}
     </div>
 </header>
