--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>{{ site.title }} | {{ page.title }}</title>
-    {% include analytics.html %}
-    {% include favicon.html %}
-    {% include css.html %}
-    {% include lightbox.html %}
+    <title>{{- site.title -}} | {{- page.title -}}</title>
+    {%- include analytics.html -%}
+    {%- include favicon.html -%}
+    {%- include css.html -%}
+    {%- include lightbox.html -%}
 </head>
