--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,7 @@
     {%- include analytics.html -%}
     {%- include favicon.html -%}
     {%- include css.html -%}
+    {%- comment -%}
     {%- include lightbox.html -%}
+    {%- endcomment -%}
 </head>
