--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
-    {% include head.html %}
+    {%- include head.html -%}
     <body>
-        {% include header.html %}
+        {%- include header.html -%}
         <section>
             <div id="TrueCentered">
-                <h2>{{ page.title }}</h2>
+                <h2>{{- page.title -}}</h2>
             </div>
             <div id="Content">
-                {{ content }}
+                {{- content -}}
             </div>
         </section>
         <div id="Centered">
             <p>~</p>
-            {% comment %}
-            {% include ads.html %}
-            {% endcomment %}
-            {% include footer.html %}
+            {%- comment -%}
+            {%- include ads.html -%}
+            {%- endcomment -%}
+            {%- include footer.html -%}
         </div>
     </body>
 </html>
