--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,13 +22,13 @@
     {%- endif -%}
 {%- endfor -%}
 <p>
-    <a href = "{{- homePageStrictDir -}}">{{ homeTitle }}</a>
+    <a href = "{{ homePageStrictDir }}">{{ homeTitle }}</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href = "{{- aboutMePageStrictDir -}}">{{ aboutMeTitle }}</a>
+    <a href = "{{ aboutMePageStrictDir }}">{{ aboutMeTitle }}</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href = "{{- gamesPageStrictDir -}}">{{ gamesTitle }}</a>
+    <a href = "{{ gamesPageStrictDir }}">{{ gamesTitle }}</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href= "{{- site.linkedInUrl -}}">R&eacute;sum&eacute;</a>
+    <a href= "{{ site.linkedInUrl }}">R&eacute;sum&eacute;</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href = "mailto:{{- site.email -}}?subject=jplc.ca%20Site%20Visit">Contact</a>
+    <a href = "mailto:{{ site.email }}?subject=jplc.ca%20Site%20Visit">Contact</a>
 </p>
