--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,10 @@
         {%- include header.html -%}
         <section>
             <div id="TrueCentered">
-                <h2>{{- page.title -}}</h2>
+                <h2>{{ page.title }}</h2>
             </div>
             <div id="Content">
-                {{- content -}}
+                {{ content }}
             </div>
         </section>
         <div id="Centered">
