--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-    {%- include head.html -%}
+    {% include head.html -%}
     <body>
-        {%- include header.html -%}
+        {% include header.html -%}
         <section>
             <div id="TrueCentered">
                 <h2>{{ page.title }}</h2>
@@ -16,7 +16,7 @@
             {%- comment -%}
             {%- include ads.html -%}
             {%- endcomment -%}
-            {%- include footer.html -%}
+            {% include footer.html -%}
         </div>
     </body>
 </html>
