--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>{{ site.title }} | {{ page.title }}</title>
-    {%- include analytics.html -%}
+    {% include analytics.html -%}
     {%- include favicon.html -%}
     {%- include css.html -%}
     {%- comment -%}
