--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <h1>{{ site.title }}</h1>
     </div>
     <p class="centered">
-        <img src="/eye_banner.jpg" alt="Welcome!">
+        <img src="/images/eye_banner.jpg" alt="Welcome!">
     </p>
     <div id="Centered">
         {% include nav.html %}
