--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,5 +6,5 @@
     <title>{{ site.title }} | {{ page.title }}</title>
     {% include analytics.html -%}
     {%- include favicon.html -%}
-    {%- include css.html -%}
+    <link rel="stylesheet" type="text/css" href="/style.css" media="screen">
 </head>
