--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer>
-    <p>© 2009-2019 {{ site.firstName }} {{ site.lastName }}</p>
-    <p>Powered by <a href="https://pages.github.com/">GitHub Pages</a>.</p>
+    <p class="centered">© 2009-2019 {{ site.firstName }} {{ site.lastName }}</p>
+    <p class="centered">Powered by <a href="https://pages.github.com/">GitHub Pages</a>.</p>
 </footer>
