--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,7 @@
-<footer>
-    <p class="centered">© 2009-2019 {{ site.firstName }} {{ site.lastName }}</p>
-    <p class="centered">Powered by <a href="https://pages.github.com/">GitHub Pages</a>.</p>
-</footer>
+<div class="item-page-footer">
+    <p class="centered">~</p>
+    <footer>
+        <p class="centered">© 2009-2019 {{ site.firstName }} {{ site.lastName }}</p>
+        <p class="centered">Powered by <a href="https://pages.github.com/">GitHub Pages</a>.</p>
+    </footer>
+</div>
