--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,19 +24,19 @@
 <div class="item-page-nav">
     <div class="container-nav">
         <div class="item-nav-link-1">
-            <p class="centered"><a href = "{{ homePageStrictDir }}">{{ homeTitle }}</a></p>
+            <p class="centered"><a class="nav" href = "{{ homePageStrictDir }}">{{ homeTitle }}</a></p>
         </div>
         <div class="item-nav-link-2">
-            <p class="centered"><a href = "{{ aboutMePageStrictDir }}">{{ aboutMeTitle }}</a></p>
+            <p class="centered"><a class="nav" href = "{{ aboutMePageStrictDir }}">{{ aboutMeTitle }}</a></p>
         </div>
         <div class="item-nav-link-3">
-            <p class="centered"><a href = "{{ gamesPageStrictDir }}">{{ gamesTitle }}</a></p>
+            <p class="centered"><a class="nav" href = "{{ gamesPageStrictDir }}">{{ gamesTitle }}</a></p>
         </div>
         <div class="item-nav-link-4">
-            <p class="centered"><a href= "{{ site.linkedInUrl }}">R&eacute;sum&eacute;</a></p>
+            <p class="centered"><a class="nav" href= "{{ site.linkedInUrl }}">R&eacute;sum&eacute;</a></p>
         </div>
         <div class="item-nav-link-5">
-            <p class="centered"><a href = "mailto:{{ site.email }}?subject=jplc.ca%20Site%20Visit">Contact</a></p>
+            <p class="centered"><a class="nav" href = "mailto:{{ site.email }}?subject=jplc.ca%20Site%20Visit">Contact</a></p>
         </div>
     </div>
 </div>
