--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,9 @@
         <h1 class="centered">{{ site.title }}</h1>
     </div>
     <div class="item-page-banner">
-        <img class="centered" src="/images/eye_banner.jpg" alt="Welcome!">
+        <p class="centered">
+            <img src="/images/eye_banner.jpg" alt="Welcome!">
+        </p>
     </div>
     {% include nav.html %}
 </header>
