--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <header>
-    <div id="Centered">
-        <h1>{{ site.title }}</h1>
+    <div class="item-page-title">
+        <h1 class="centered">{{ site.title }}</h1>
     </div>
-    <p class="centered">
-        <img src="/images/eye_banner.jpg" alt="Welcome!">
-    </p>
-    <div id="Centered">
-        {% include nav.html %}
+    <div class="item-page-banner">
+        <p class="centered">
+            <img src="/images/eye_banner.jpg" alt="Welcome!">
+        </p>
     </div>
+    {% include nav.html %}
 </header>
